PEAR-1937 - fix skip nav link not being offscreen at wider screen size

--- a/packages/sapien/style/bodyplot.css
+++ b/packages/sapien/style/bodyplot.css
@@ -235,7 +235,7 @@
 
 #human-body-root #body-plot-skip-nav {
   position: absolute;
-  left: -1000px;
+  left: -5000px;
 }
 
 #human-body-root #body-plot-skip-nav:focus {
